feat: exclusão de conta pelo próprio usuário (LGPD art. 18)
