# lib/api/schemas/delete-own-account-dto.ts
@@ -1,0 +1,11 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+export type DeleteOwnAccountDto = {
+	/**
+	 * @type string
+	 */
+	password: string;
+};
