# lib/api/schemas/users/users-controller-delete-own-account.ts
@@ -1,0 +1,26 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import type { DeleteOwnAccountDto } from "../delete-own-account-dto.ts";
+import type { SuccessResponseDto } from "../success-response-dto.ts";
+
+export type UsersControllerDeleteOwnAccount200 = SuccessResponseDto;
+
+/**
+ * @description Senha incorreta
+ */
+export type UsersControllerDeleteOwnAccount401 = any;
+
+export type UsersControllerDeleteOwnAccountMutationRequest =
+	DeleteOwnAccountDto;
+
+export type UsersControllerDeleteOwnAccountMutationResponse =
+	UsersControllerDeleteOwnAccount200;
+
+export type UsersControllerDeleteOwnAccountMutation = {
+	Response: UsersControllerDeleteOwnAccount200;
+	Request: UsersControllerDeleteOwnAccountMutationRequest;
+	Errors: UsersControllerDeleteOwnAccount401;
+};
